# Slimium

./: README.md
chromium-build-config/: BUILD.gn  args.gn  dump_ir_args.gn  marking_args.gn  profiling_args.gn
src/disassemble/: disassemble_marking.py
src/eval/: README.md  generate_removable_functions.py  get_1000_websites_avg_removed_code_size.py  test_1000.py  websites.txt
src/eval/plots/: 0.5_0.5_diff.txt  0.6_0.6_diff.txt  0.7_0.7_diff.txt  0.8_0.8_diff.txt  0.9_0.9_diff.txt  add_code.py  code_rd.py  feature_nonde_code.txt  grouped_feature_usages.json  heatmap.py
src/eval/rebuttal/: q3.py
src/feature_code_mapping/: auto_extend_mapping.py  auto_extend_mapping.sh  auto_generate_extended_feature_code_maps.py  manual_feature_code_map.json  unit.py
src/feature_code_mapping/extended_feature_code_maps/: extended_0.500000_0.500000_map.json  (+24 more)
src/profile/: baseline_profiling.py  evolve_profiling.py
src/rewrite/: collect_logs.py  convert_nondeterministic_code.py  count_nondeterministic_code.py  count_nondeterministic_code.sh  get_removable_functions.py  get_removable_functions.sh  rewrite.py  rewrite_and_test.py  simple_count_nondeterministic_code.py  test_1000_batch.sh  unit.py  utils.py
src/shm/: .gitignore  Makefile  README.md  defs.h  shm_clear.c  shm_create.c  shm_decode.c  shm_read.c
src/static_analysis/: generate_unique_indexes.py
src/static_analysis/customized_devirt/src/lib/: CMakeLists.txt  Devirt.cpp  Project.h  Util.cpp
src/static_analysis/group-functions/src/lib/: CMakeLists.txt  GroupFunctions.cpp  GroupFunctions.h  Project.h  Util.cpp
(+9 files in other folders)
